# SimpleNet

./: .gitignore  CMakeLists.txt  README.md  README.txt
examples/: CMakeLists.txt  simple_client.cpp  simple_server.cpp
lib/Debug/: SimpleNet.lib
src/: network_message.hpp  simplenet.hpp  socket_base.cpp  socket_base.hpp  socket_stream.hpp  tcp_acceptor.cpp  tcp_acceptor.hpp  tcp_stream.cpp  tcp_stream.hpp  udp_stream.cpp  udp_stream.hpp
src/utility/: protocol.hpp  scheduler.cpp  scheduler.hpp  service.cpp  service.hpp  service_manager.hpp  task.hpp  thread.hpp
